--- a/teams.html
+++ b/teams.html
@@ -43,7 +43,7 @@ permalink: /teams/
                   <!-- Team Leads -->
                   <li class="mix Leadership">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Current Team Leads</h2>
@@ -55,7 +55,7 @@ permalink: /teams/
                   <!-- Meetings -->
                   <li class="mix Leadership">
                     <a href="#">
-                    <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                    <img src="{{ site.baseurl }}/img/teams/meetings.jpg" alt="By Howard Chandler Christy - The Indian Reporter, Public Domain, https://commons.wikimedia.org/w/index.php?curid=662340">
                     <div class="overly">
                       <div class="position-center">
                         <h2>Meetings</h2>
@@ -67,7 +67,7 @@ permalink: /teams/
                   <!-- Communication -->
                   <li class="mix Leadership">
                     <a href="#">
-                    <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                    <img src="{{ site.baseurl }}/img/teams/communicate.gif" alt="https://www.buildabear.com/">
                     <div class="overly">
                       <div class="position-center">
                         <h2>Communication</h2>
@@ -79,7 +79,7 @@ permalink: /teams/
                   <!-- Management -->
                   <li class="mix Leadership">
                     <a href="#">
-                    <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                    <img src="{{ site.baseurl }}/img/teams/motivation.gif" alt="https://www.reddit.com/r/gifs/comments/3abbzr/i_couldnt_find_one_of_these_so_i_made_one_instead/">
                     <div class="overly">
                       <div class="position-center">
                         <h2>Motivation</h2>
@@ -92,7 +92,7 @@ permalink: /teams/
                   <!-- Airfoil -->
                   <li class="mix Aerodynamics">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Airfoil Analysis</h2>
@@ -104,7 +104,7 @@ permalink: /teams/
                   <!-- Wing Design -->
                   <li class="mix Aerodynamics">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Wing Analysis</h2>
@@ -116,7 +116,7 @@ permalink: /teams/
                   <!-- Stability Analysis -->
                   <li class="mix Aerodynamics">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Stability Analysis</h2>
@@ -128,7 +128,7 @@ permalink: /teams/
                   <!-- CFD -->
                   <li class="mix Aerodynamics">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>CFD</h2>
@@ -140,7 +140,7 @@ permalink: /teams/
                   <!-- Wind Tunnel Testing -->
                   <li class="mix Aerodynamics">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/windtunnel.gif" alt="https://giphy.com/discoveryeurope/">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Wind Tunnel Testing</h2>
@@ -153,7 +153,7 @@ permalink: /teams/
                   <!-- Parts -->
                   <li class="mix Graphics">
                     <a href="#">
-                    <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                    <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                     <div class="overly">
                       <div class="position-center">
                         <h2>Part Modeling</h2>
@@ -165,7 +165,7 @@ permalink: /teams/
                   <!-- Assemblies -->
                   <li class="mix Graphics">
                     <a href="#">
-                    <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                    <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                     <div class="overly">
                       <div class="position-center">
                         <h2>Part Assemblies</h2>
@@ -177,7 +177,7 @@ permalink: /teams/
                 <!-- Drawings -->
                 <li class="mix Graphics">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Drawings/Renderings</h2>
@@ -190,7 +190,7 @@ permalink: /teams/
                 <!-- FEA -->
                 <li class="mix Structures">
                    <a href="#">
-                   <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                   <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                    <div class="overly">
                      <div class="position-center">
                        <h2>FEA</h2>
@@ -202,7 +202,7 @@ permalink: /teams/
                 <!-- Flutter -->
                 <li class="mix Structures">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/flutter.gif" alt="https://www.reddit.com/r/gifs/comments/4ducxg/trippy_wobble_bridge/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Flutter</h2>
@@ -214,7 +214,7 @@ permalink: /teams/
                 <!-- Testing -->
                 <li class="mix Structures">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/structuretest.gif" alt="https://www.popularmechanics.com/flight/g2428/7-airplane-wing-stress-tests/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Structural Testing</h2>
@@ -227,7 +227,7 @@ permalink: /teams/
                 <!-- Propellers -->
                 <li class="mix Propulsion">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/propeller.gif" alt="https://giphy.com/usnationalarchives/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Propellers</h2>
@@ -239,7 +239,7 @@ permalink: /teams/
                 <!-- Motors -->
                 <li class="mix Propulsion">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/motor.gif" alt="https://imgur.com/gallery/AcCU6brmo">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Motors</h2>
@@ -251,7 +251,7 @@ permalink: /teams/
                 <!-- Electronics -->
                 <li class="mix Propulsion">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Electronics</h2>
@@ -263,7 +263,7 @@ permalink: /teams/
                 <!-- Wind tunnel - 2 -->
                 <li class="mix Propulsion">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Wind Tunnel Testing</h2>
@@ -276,7 +276,7 @@ permalink: /teams/
                 <!-- Prototyping -->
                 <li class="mix Manufacturing">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Prototyping</h2>
@@ -288,7 +288,7 @@ permalink: /teams/
                 <!-- Composites -->
                 <li class="mix Manufacturing">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Composites</h2>
@@ -300,7 +300,7 @@ permalink: /teams/
                 <!-- CNC -->
                 <li class="mix Manufacturing">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/cnc.gif" alt="https://giphy.com/TITANSofCNC/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>CNC</h2>
@@ -312,7 +312,7 @@ permalink: /teams/
                 <!-- 3D printing -->
                 <li class="mix Manufacturing">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                <img src="{{ site.baseurl }}/img/teams/3dprint.gif" alt="https://giphy.com/banggood/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>3D Printing</h2>
@@ -324,7 +324,7 @@ permalink: /teams/
                 <!-- Laser Cutting -->
                 <li class="mix Manufacturing">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Laser Cutting</h2>
@@ -337,7 +337,7 @@ permalink: /teams/
                 <!-- Design -->
                 <li class="mix Systems">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>System Design</h2>
@@ -349,7 +349,7 @@ permalink: /teams/
                 <!-- Specialty -->
                 <li class="mix Systems">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Specialty Systems</h2>
@@ -362,7 +362,7 @@ permalink: /teams/
                 <!-- Simulation -->
                 <li class="mix Piloting">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/simulator.gif" alt="https://giphy.com/gifs/gamer-BfS4DLftk3dsY">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Simulator</h2>
@@ -374,7 +374,7 @@ permalink: /teams/
                 <!-- Testing -->
                 <li class="mix Piloting">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/flighttest.gif" alt="https://giphy.com/mit/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Flight Testing</h2>
@@ -386,7 +386,7 @@ permalink: /teams/
                 <!-- Fly off -->
                 <li class="mix Piloting">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/flyoff.gif" alt="https://www.reddit.com/r/gifs/comments/1qrxus/f22_raptor_climb/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Fly-off</h2>
