--- a/teams.html
+++ b/teams.html
@@ -43,7 +43,7 @@ permalink: /teams/
                   <!-- Team Leads -->
                   <li class="mix Leadership">
                     <a href="#">
-                      <img class="static" src="{{ site.baseurl }}/img/teams/work3.jpg" alt=""><img class="active" src="{{ site.baseurl }}/img/teams/motivation.gif" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Current Team Leads</h2>
